# habits

habits/backend/app/: models.py
habits_full_project/: README.md
habits_full_project/backend/: Dockerfile  README_BACKEND.md  pyproject.toml
habits_full_project/backend/alembic/: env.py
habits_full_project/backend/app/: crud.py  main.py  schemas.py
habits_full_project/bot/: Dockerfile  bot.py
habits_project/: docker-compose.yml
habits_project/backend/: pyproject.toml
habits_project/backend/app/: auth.py
